<resources>
    <string name="app_name">UBSAUP</string>
    <string name="no_internet">No internet connection...!</string>
    <string name="retry">Retry</string>
    <string name="crash_toast_text">Oops ! App crashed, but a report has been sent to  developers to help fix the issue !</string>
    <string name="h_fname">* Enter First Name</string>
    <string name="h_lname">* Enter Last Name</string>
    <string name="h_mname">Enter Middle Name</string>
    <string name="h_email">* Enter Email ID</string>
    <string name="email_invalid_val">Please enter the valid email id</string>
    <string name="h_password">* Enter Password</string>
    <string name="h_password_lenght">Password must be minimum 6 characters length</string>
    <string name="v_gender">Please select gender</string>
    <string name="v_postal">Please enter the valid postal code</string>
    <string name="v_number">Please enter the valid phone number</string>
    <string name="h_gender">* Enter Male / Female</string>
    <string name="h_dob">* Enter DOB (mm/dd/yyyy)</string>
    <string name="clerical_staff">Clerical Staff</string>
    <string name="sub_staff">Sub Staff</string>
    <string name="part_time_employees">Part Time Employees</string>
    <string name="disciplinary_action">DISCIPLINARY ACTION</string>
    <string name="gross_misconduct_list">Gross MISCONDUCT LIST</string>
    <string name="minor_misconduct_list">MINOR MISCONDUCT LIST</string>
    <string name="disciplinary_action_">Disciplinary Action &amp; Procedure:</string>
    <string name="disciplinary_action_data">The procedure for taking any disciplinary action against employees is well-defined and codified under the Bipartite Settlement dated 10th April, 2002 between the Union and the management (IBA).The nature of charges that can be leveled against the employees is categorized and grouped as Major Misconduct and Minor Misconduct.Types of punishments that management can impose on the employees for any proven misconduct are also defined in the Settlement.Management has to follow the set procedure and prove the charges before imposing punishment.\n\n
Employee has the right to be defended by the Union.\n\n
Hence whenever any memo, charge-sheet, show-cause letter is given to any employee, the union should be contacted. No reply or any statement or apology letter should be given without consulting the Union. Union will guide the employees to submit suitable reply.Employees should learn and be thorough with their work, rules and procedures, be courteous to customers and superiors, follow the laid down instructions, etc. so that no room is given for any disciplinary action.Special caution is necessary while working in the computers like non-handing over the password, etc., to avoid misuse by others.
</string>
    <string name="suspension_allowance">SUSPENSION &amp; ALLOWANCE</string>
    <string name="suspension_allowance_data">SUSPENSION Clause 14.3 of Settlement dt. 17-9-84:
\n
Pending or initiation of such enquiry, an employee may be suspended, but if on the conclusion of the enquiry it is decided to take no action against him he shall be deemed to have been on duty and shall be entitled to the full wages and allowances and to all other privileges for the period of suspension; and if some punishment other than dismissal is inflicted, the whole or a part of the period of suspension, may, at the discretion of the management, be treated as on duty with the right to a corresponding portion of the wages allowance, etc.
\n
Clause 18 of Settlement dt. 31-10-79
\n
(iii) It is also agreed that employees on suspension will be entitled to the facility of medical aid and hospitalisation.
\n
SUBSISTENCE ALLOWANCE DURING SUSPENSION
\n\nClause 5 of Settlement dt. 8-9-83
\n
In partial modification of Para 557 of the Sastry Award and Para 17.14 of the Desai Award, the following provisions shall apply in regard to payment of subsistance allowance to workmen under suspension.
\n
a. Where the investigation is not entrusted to or taken up by an outside agency (i.e. Police / CSI), subsistance allowance will be payable at the following rates:
\n
i. For the first 3 months 1/3 of the pay and allowances which the workmen would have got but for the suspension.
\n
ii. Thereafter 1/2 of the pay and allowances.
\n
iii. After one year full pay and allowances if the enquiry is not delayed for reasons attributable to the concerned workman or any of his representatives. Where the investigation is done by an outside agency and the said agency has come to the conclusion not be prosecute the employee, full pay and allowances will be payable after 6 months from the date of receipt of report of such agency, or one year after suspension, whichever is later and in the event the enquiry is not delayed for reasons attributable to the workman or any of his representative
</string>
    <string name="list_of_minor_misconduct">LIST OF MINOR MISCONDUCT:</string>
    <string name="minior_misconduct">
(a) absence without leave or overstaying sanctioned leave without sufficient grounds;
\n
(b) unpunctual or irregular attendance;
\n
(c) neglect of work, negligence in performing duties;
\n
(d) breach of any rule of business of the bank or instruction for the running of any department;
\n
(e) committing nuisance on the premises of the bank;
\n
(f) entering or leaving the premises of the bank except by an entrance provided for the purpose;
\n
(g) attempt to collect or collecting moneys within the premises of the bank without the previous permission of the management or except as allowed by any rule or law for the time being in force;
\n
(h) holding or attempting to hold or attending any meeting on the premises of the bank without the previous permission of the management or except in accordance with the provisions of any rule or law for the time being in force;
\n
(i) canvassing for union membership or collection of union dues or subscriptions within the premises of the bank without the previous permission of the management or except in accordance with the provisions of any rule or law for the time being in force;
\n
(j) failing to show proper consideration, courtesy or attention towards officers, customers or other employees of the bank, unseemly or unsatisfactory behavior while on duty;
\n
(k) marked disregard of ordinary requirements of decency and cleanliness in person or dress;
\n
(I) incurring debts to an extent considered by the management as excessive;
\n
(m) resorting to unfair practice of any nature whatsoever in any examination conducted by the Indian Institute of Bankers or by or on behalf of the bank in cases not covered by sub-clause (n) under ‘Gross Misconduct’ and where a report to that effect has been received by the bank from the concerned authority and the employee accepts the charge;
\n
(n) refusal to attend training programmes without assigning sufficient and valid reasons;
\n
(o) Not wearing, while on duty, identity card issued by the bank;
\n
(p) Not wearing, while on duty, the uniforms supplied by the bank, in clean condition.
\n
PUNISHMENTS:\n
(a) be warned or censured; or
\n
(b) have an adverse remark entered against him; or
\n
(c) have his increment stopped for a period not longer than six months.
</string>
    <string name="list_of_gross_misconduct">LIST OF GROSS MISCONDUCT:</string>
    <string name="gross_misconduct">
(a) engaging in any trade or business outside the scope of his duties except with the written permission of the bank;
\n
(b) unauthorised disclosure of information regarding the affairs of the bank or any of its customers or any other person connected with the business of the bank which is confidential or the disclosure of which is likely to be prejudicial to the interests of the bank;
\n
(c) drunkenness or riotous or disorderly or indecent behavior on the premises of the bank;
\n
(d) willful damage or attempt to cause damage to the property of the bank or any of its customers;
\n
(e) willful insubordination or disobedience of any lawful and reasonable order of the management or of a superior;
\n
(f) habitual doing of any act which amounts to “minor misconduct” as defined below, “habitual” meaning a course of action taken or persisted in, notwithstanding that at least on three previous occasions censure or warnings have been administered or an adverse remark has been entered against him;
\n
(g) willful slowing down in performance of work;
\n
(h) gambling or betting on the premises of the bank
\n
(i) speculation in stocks, shares, securities or any commodity whether on his account or that of any other persons;
\n
(j) doing any act prejudicial to the interest of the bank or gross negligence or negligence involving or likely to involve the bank in serious loss;
\n
(k) giving or taking a bribe or illegal gratification from a customer or an employee of the bank
\n
(l) abetment or instigation of any of the acts or omissions above mentioned.
\n
(m) Knowingly making a false statement in any document pertaining to or in connection with his employment in the bank.
\n
(n) Resorting to unfair practice of any nature whatsoever in any examination conducted by the Indian Institute of Bankers or by or on behalf of the bank and where the employee is caught in the act of resorting to such unfair practice and a report to that effect has been received by the bank from the concerned authority.
\n
(o) Resorting to unfair practice of any nature whatsoever in any examination conducted by the Indian Institute of Bankers or by or on behalf of the bank in cases not covered by the above Sub-Clause(n) and where a report to that effect has been received by the bank from the concerned authority and the employee does not accept the charge.
\n
(p) Remaining unauthorisedly absent without intimation continuously for a period exceeding 30 days.
\n
(q) Misbehaviour towards customers arising out of bank’s business.
\n
(r) Contesting election for parliament / legislative assembly / legislative council / local bodies / municipal corporation / panchayat without explicit written permission of the bank.
\n
(s) Conviction by a criminal Court of Law for an offence involving moral turpitude.
\n
(t) indulging in any act of sexual harassment of any woman at her workplace.
\n
Note: Sexual harassment shall include such unwelcome sexually determined behavior (whether directly or otherwise) as
\n
(a) physical contact and advances;
\n
(b) demand or request for sexual favours;
\n
(c) sexually coloured remarks;
\n
(d) showing pornography; or
\n
(e) any other unwelcome physical verbal or non-verbal conduct of a sexual nature.
\n
PUNISHMENTS:
\n(a) be dismissed without notice; or
\n
(b) be removed from service with superannuation benefits i.e. Pension and / or Provident Fund and Gratuity as would be due otherwise under the Rules or Regulations prevailing at the relevant time and without disqualification from future employment; or
\n
(c) be compulsorily retired with superannuation benefits i.e. Pension and / or Provident Fund and Gratuity as would be due otherwise under the Rules or Regulations prevailing at the relevant time and without disqualification from future employment; or
\n
(d) be discharged from service with superannuation benefits i.e. Pension and / or Provident Fund and Gratuity as would be due otherwise under the Rules or Regulations prevailing at the relevant time and without disqualification from future employment; or
\n
(e) be brought down to lower stage in the scale of pay up to a maximum of two stages; or
\n
(f) have his increment/s stopped with or without cumulative effect; or
\n
(g) have his special pay withdrawn; or
\n
(h) be warned or censured, or have an adverse remark entered against him;or
\n
(i) be fined.
</string>
    <string name="portfolio">Portfolio : -</string>
    <string name="name">Name :-</string>
    <string name="place">Place :-</string>
    <string name="mobile">Mobile :-</string>
    <string name="email_">Email :-</string>
</resources>