<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/actionbarlayout" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/card_old_pension_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_margin="@dimen/_5sdp"
                app:cardUseCompatPadding="true">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawableEnd="@android:drawable/arrow_down_float"
                    android:drawableTint="@color/Black"
                    android:fontFamily="@font/poppins_medium_0"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@string/disciplinary_action"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/_14sdp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_old_pension"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:visibility="gone"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_8sdp">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semi_bold_0"
                        android:gravity="center_vertical"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:text="@string/disciplinary_action_"
                        android:textColor="@color/Black"
                        android:textSize="@dimen/_14sdp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular_0"
                        android:lineSpacingExtra="@dimen/_2sdp"
                        android:text="@string/disciplinary_action_data"
                        android:textColor="@color/Black"
                        android:textIsSelectable="false"
                        android:textSize="@dimen/_13sdp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_new_pension"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_margin="@dimen/_5sdp"
                app:cardUseCompatPadding="true">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawableEnd="@android:drawable/arrow_down_float"
                    android:drawableTint="@color/Black"
                    android:fontFamily="@font/poppins_medium_0"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@string/gross_misconduct_list"
                    android:textColor="@color/Black"
                    android:textIsSelectable="false"
                    android:textSize="@dimen/_14sdp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_new_pension_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:visibility="gone"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_8sdp">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semi_bold_0"
                        android:gravity="center_vertical"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:text="@string/list_of_gross_misconduct"
                        android:textColor="@color/Black"
                        android:textIsSelectable="false"
                        android:textSize="@dimen/_14sdp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular_0"
                        android:lineSpacingExtra="@dimen/_2sdp"
                        android:text="@string/gross_misconduct"
                        android:textColor="@color/Black"
                        android:textIsSelectable="false"
                        android:textSize="@dimen/_13sdp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/tv_pf_graduity"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_margin="@dimen/_5sdp"
                app:cardUseCompatPadding="true">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawableEnd="@android:drawable/arrow_down_float"
                    android:drawableTint="@color/Black"
                    android:fontFamily="@font/poppins_medium_0"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@string/minor_misconduct_list"
                    android:textColor="@color/Black"
                    android:textIsSelectable="false"
                    android:textSize="@dimen/_14sdp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_graduity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:visibility="gone"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_8sdp">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semi_bold_0"
                        android:gravity="center_vertical"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:text="@string/list_of_minor_misconduct"
                        android:textColor="@color/Black"
                        android:textIsSelectable="false"
                        android:textSize="@dimen/_14sdp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular_0"
                        android:lineSpacingExtra="@dimen/_2sdp"
                        android:text="@string/minior_misconduct"
                        android:textColor="@color/Black"
                        android:textIsSelectable="false"
                        android:textSize="@dimen/_13sdp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/tv_suspension_allowance"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_margin="@dimen/_5sdp"
                app:cardUseCompatPadding="true">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawableEnd="@android:drawable/arrow_down_float"
                    android:drawableTint="@color/Black"
                    android:fontFamily="@font/poppins_medium_0"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@string/suspension_allowance"
                    android:textColor="@color/Black"
                    android:textIsSelectable="false"
                    android:textSize="@dimen/_14sdp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_tv_suspension_allowance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:visibility="gone"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_8sdp">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semi_bold_0"
                        android:gravity="center_vertical"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:text="@string/suspension_allowance"
                        android:textColor="@color/Black"
                        android:textIsSelectable="false"
                        android:textSize="@dimen/_14sdp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular_0"
                        android:lineSpacingExtra="@dimen/_2sdp"
                        android:text="@string/suspension_allowance_data"
                        android:textColor="@color/Black"
                        android:textIsSelectable="false"
                        android:textSize="@dimen/_13sdp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
